# back_projection_diffusion

./: Metrics.ipynb  README.md  fstar_net.py  fstars.py  pyproject.toml  utils.py
back_projection_diffusion/: __init__.py
back_projection_diffusion/colab/: Analytical_CNN.ipynb  EquiNet_CNN.ipynb
back_projection_diffusion/data_generation/: eta_generation_3510tri.m
back_projection_diffusion/examples/: B_EquiNet_CNN.ipynb  EquiNet_CNN.ipynb  b_equinet_cnn.ipynb  equinet_cnn.ipynb
back_projection_diffusion/examples/tmp/equinet_cnn_10hsquares/: events.out.tfevents.1778173555.jaipur.1258516.0.v2  events.out.tfevents.1778185813.jaipur.1415374.0.v2  events.out.tfevents.1778185987.jaipur.1415374.1.v2
back_projection_diffusion/examples/variants/: Analytical_CNN.ipynb  SwitchNet_CNN.ipynb  analytical_cnn.ipynb  switchnet_cnn.ipynb
back_projection_diffusion/src/: __init__.py  fstar_cnn.py  fstars.py  utils.py
colab/: Analytical_CNN_10hOverlappingSquares.ipynb  B_EquiNet_CNN.ipynb  B_EquiNet_CNN_10hOverlappingSquares.ipynb  EquiNet_CNN.ipynb  EquiNet_CNN_10hOverlappingSquares.ipynb  SwitchNet_CNN.ipynb  SwitchNet_CNN_10hOverlappingSquaress.ipynb  final_Analytical_CNN_10hSquares.ipynb  final_Analytical_CNN_3510Triangles.ipynb  final_Analytical_CNN_Shepp_Logan.ipynb  final_Butterfly_EquiNet_CNN_10hOverlappingSquares.ipynb  final_Butterfly_EquiNet_CNN_3510Triangles.ipynb  final_Butterfly_EquiNet_CNN_SheppLogan.ipynb  final_SwitchNet_CNN_10h_Overlapping_Squares.ipynb  final_SwitchNet_CNN_3510tri.ipynb  final_SwitchNet_CNN_SheppLogan.ipynb  final_diffusion_uncompressed_10h_Squares.ipynb  final_diffusion_uncompressed_3510h_rotated_triangles.ipynb  final_diffusion_uncompressed_fastMRI_120.ipynb  final_diffusion_uncompressed_fastMRI_60.ipynb  final_diffusion_uncompressed_fastMRI_80.ipynb  final_diffusion_uncompressed_fastMRI_high.ipynb  final_diffusion_uncompressed_shepp_logan.ipynb
data_generation/: data_generation.m  data_generation_shepp_logan_eta.m
data_generation/jax_forward_scattering/: scattering_test.ipynb
data_generation/jax_forward_scattering/src/: __init__.py  base.py  scattering.py  scipy_finite_difference.py
data_generation/jax_scattering_forward/: scattering.py  scattering_test.ipynb
data_generation/matlab_forward_scattering/: eta_generation_10h_squares.m
src/: __init__.py  fstars.py
src/tmp/equinet_cnn_10hsquares/: events.out.tfevents.1738131031.jaipur.542170.0.v2
src/tmp/equinet_cnn_10hsquares/checkpoints/4000/: _CHECKPOINT_METADATA
src/tmp/equinet_cnn_10hsquares/checkpoints/6000/: _CHECKPOINT_METADATA
src/tmp/equinet_cnn_10hsquares/checkpoints/8000/: _CHECKPOINT_METADATA
tmp/diffusion_uncompressed_10hsquares_final/: events.out.tfevents.1719430552.hongkong.3797115.0.v2  events.out.tfevents.1719436777.hongkong.3797115.1.v2
tmp/diffusion_uncompressed_10hsquares_final/checkpoints/154000/default/: manifest.ocdbt
tmp/diffusion_uncompressed_10hsquares_final/checkpoints/156000/default/: manifest.ocdbt
tmp/diffusion_uncompressed_10hsquares_final/checkpoints/157500/default/: checkpoint  manifest.ocdbt
tmp/diffusion_uncompressed_3510tri/: events.out.tfevents.1718714323.hongkong.1469839.0.v2
tmp/diffusion_uncompressed_3510tri/checkpoints/154000/default/: manifest.ocdbt
tmp/diffusion_uncompressed_fastmri_120/: events.out.tfevents.1719949684.hongkong.3343091.0.v2
tmp/diffusion_uncompressed_fastmri_60/: events.out.tfevents.1719906615.hongkong.2701775.0.v2
tmp/diffusion_uncompressed_fastmri_80/: events.out.tfevents.1719924155.hongkong.2965751.0.v2
tmp/diffusion_uncompressed_shepp_logan/: events.out.tfevents.1718639734.hongkong.269523.0.v2
(+50 files in other folders)
