[project]
name = "back_projection_diffusion"
description = "Solving Inverse Scattering Problem with Diffusion Models"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Borong Zhang", email="borongzhang@yahoo.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
keywords = [
  "diffusion", "machine learning", "jax", "inverse scattering problem"
]

dependencies = [
  "absl-py",
  "chex",
  "clu",
  "etils",
  "flax",
  "h5py",
  "grain-nightly",
  "gin-config",
  "jax",
  "matplotlib",
  "numpy",
  "optax",
  "orbax-checkpoint",
  "tensorflow",
  "tqdm",
  "xarray",
  "xarray_tensorstore",
  "pyyaml",
  "pysteps",
  "ott-jax==0.4.7",
]

dynamic = ["version"]

[project.urls]
homepage = "https://borongzhang.com/"
repository = "https://github.com/borongzhang/back_projection_diffusion"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "pylint>=2.6.0",
    "pyink",
]

[tool.pyink]
line-length = 80
preview = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [
  "**/*_test.py",
]
