[project]
name = "back_projection_diffusion"
description = "Solving Inverse Scattering Problem with Diffusion Models"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Borong Zhang", email="borongzhang@yahoo.com"},
]

dependencies = [
  # Install swirl-dynamics from a specific commit using the VCS dependency syntax
  "swirl-dynamics @ git+https://github.com/google-research/swirl-dynamics.git@057c93cebc3c8ccac996bc5a5b49c88e3e39c4b0",
  "jupyter",
  "matplotlib",
  "natsort",
  "pysteps",
  "ott-jax==0.4.7"
]

[project.urls]
homepage = "https://borongzhang.com/"
repository = "https://github.com/borongzhang/back_projection_diffusion"

[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"
